--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,10 @@
     "paths": {
       "~/*": ["app/*"],
       "@/*": ["app/*"]
-    }
+    },
+    "typeRoots": ["types"],
+    "types": ["node"]
   },
-  "include": ["app", "app/**/*"],
-  "files": ["./references.d.ts"],
+  "include": ["app", "types"],
   "exclude": ["node_modules", "platforms"]
 }
