--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@triniwiz/nativescript-accelerometer": "4.0.3",
     "@vue/compiler-sfc": "^3.2.40",
     "dominative": "^0.0.5-alpha.2",
+    "nativescript-vue-router-extended": "https://github.com/ammarahm-ed/nativescript-vue-router-extended",
     "pinia": "^2.0.23",
     "undom-ng": "^1.0.0",
     "vue": "^3.2.40"
