--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@dominative/vue": "^0.0.5-alpha.14",
+    "@nativescript-community/vue": "^0.0.6-alpha.1",
     "@nativescript/core": "~8.3.5",
     "@triniwiz/nativescript-accelerometer": "4.0.3",
     "@vue/compiler-sfc": "^3.2.40",
